# f2llm

./: .gitignore  LICENSE  README.md  pyproject.toml  schema.json
.github/workflows/: release.yml  ruff.yml
src/f2llm/: __init__.py  _version.py  cli.py
